# libertix

./: .gitignore  App.xaml  App.xaml.cs  Libertix.csproj  Libertix.sln  LinuxGate.csproj  Localization.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  app1.manifest  gen-iso.sh  win11_testing.ps1
.github/: FUNDING.yml
Commands/: RelayCommand.cs
Controls/: ErrorPanel.xaml  ErrorPanel.xaml.cs
Converters/: BoolToVisibilityConverter.cs  InverseBoolConverter.cs  ResponsiveFontConverter.cs  (+3 more)
auto_tests/: .env.example  .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
auto_tests/app/: __init__.py  api_requests.py  api_runtime.py  config.py  errors.py  logging_config.py  main.py  models.py
auto_tests/app/clients/: proxmox.py  ssh.py  vision_llm.py  vision_models.py  vnc.py
auto_tests/app/filepool/: distros.json  linux-integrity.sh  menu.lst
auto_tests/app/scripts/: build_libertix.ps1  build_linuxgate.ps1  check_windows_integrity.ps1  deploy_libertix.ps1  deploy_linuxgate.ps1  force_uefi_bootnext_failure.ps1  launch_libertix.ps1  launch_libertix_elevated.ps1  launch_linuxgate.ps1  launch_linuxgate_elevated.ps1  prepare_automation_vm.ps1
auto_tests/app/services/: automation.py  automation_types.py  common.py  reset.py  source_tree.py  validation.py
auto_tests/app/web/: index.html
auto_tests/tests/: __init__.py  conftest.py  test_api.py  test_core.py  test_groq.py  test_installation_guards.py  test_proxmox.py  test_vision_llm.py
auto_tests/tools/: automate_linuxgate_vm500_ui.py  force_uefi_bootnext_failure.py  rank_capture_changes.py
(+99 files in other folders)
