[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "libertix-auto-tests"
version = "0.1.0"
description = "API de validation automatisée de Libertix"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "paramiko>=3.4,<4",
  "pillow>=11,<13",
  "pydantic-settings>=2.6,<3",
  "python-json-logger>=2.0,<4",
  "uvicorn[standard]>=0.30,<1",
  "vncdotool>=1.2,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-cov>=5,<7", "ruff>=0.8,<1"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
